--- a/client/src/components/groupsList.scss
+++ b/client/src/components/groupsList.scss
@@ -39,12 +39,14 @@
 }
 
 .group-img {
+  text-align: center;
   img{
     border-radius: 10px;
     margin-bottom: 5px;
     margin-top: 20px;
-    width: 80%;
-    height: 160px;
+    // width: 222px;
+    // height: 125px;//160px
+    //position: relative;
     
   }
  
